--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/anyway-koeln/api-server#readme",
   "dependencies": {
+    "apollo-server-express": "^2.19.0",
     "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
     "graphql": "^15.4.0"
   },
   "devDependencies": {
