--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^4.17.1",
     "graphql": "^15.4.0",
     "graphql-iso-date": "^3.6.1",
-    "graphql-type-json": "^0.3.2"
+    "graphql-type-json": "^0.3.2",
+    "node-env-file": "^0.1.8"
   },
   "devDependencies": {
     "standard": "^16.0.3"
