--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "graphql": "^15.4.0",
     "graphql-iso-date": "^3.6.1",
     "graphql-type-json": "^0.3.2",
-    "node-env-file": "^0.1.8"
+    "node-env-file": "^0.1.8",
+    "nodegit": "^0.27.0"
   },
   "devDependencies": {
     "standard": "^16.0.3"
