--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "apollo-server-express": "^2.19.0",
     "express": "^4.17.1",
+    "fs-extra": "^9.0.1",
     "graphql": "^15.4.0",
     "graphql-iso-date": "^3.6.1",
     "graphql-type-json": "^0.3.2",
