--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/anyway-koeln/api-server#readme",
   "dependencies": {
     "apollo-server-express": "^2.19.0",
+    "async-mutex": "^0.2.6",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
     "graphql": "^15.4.0",
