--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/anyway-koeln/api-server#readme",
   "dependencies": {
+    "@octokit/core": "^3.2.5",
     "apollo-server-express": "^2.19.0",
     "async-mutex": "^0.2.6",
     "express": "^4.17.1",
