--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@octokit/core": "^3.2.5",
     "apollo-server-express": "^2.19.0",
+    "async": "^3.2.0",
     "async-mutex": "^0.2.6",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
