--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "graphql-iso-date": "^3.6.1",
     "graphql-type-json": "^0.3.2",
     "gray-matter": "^4.0.2",
+    "js-yaml": "^4.0.0",
     "mongodb": "^3.6.4",
     "node-env-file": "^0.1.8",
     "uuid": "^8.3.2"
