add empty .env file

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,5 +11,6 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
+      - run: touch .env
       - run: yarn
       - run: yarn test
