--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "graphql-type-json": "^0.3.2",
     "gray-matter": "^4.0.2",
     "mongodb": "^3.6.4",
+    "node-cron": "^3.0.0",
     "node-env-file": "^0.1.8",
     "uuid": "^8.3.2"
   },
